create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1885,9 +1885,30 @@ body {
     margin: 1rem 0 0 0;
   }
 }
+.cid-rux2cwYt48 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rux2cwYt48 .title {
+  margin-bottom: 2rem;
+}
+.cid-rux2cwYt48 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rux2cwYt48 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rux2cwYt48 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rux2cwYt48 textarea.form-control {
+  min-height: 188px;
+}
 .cid-rupK3Fkqfb {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rupK3Fkqfb .line {
@@ -1987,7 +2008,7 @@ body {
 }
 .cid-rupqcW5UGE .mbr-text {
   text-align: left;
-  color: #232323;
+  color: #03151a;
 }
 .cid-rupaNGlfLs .navbar {
   padding: .5rem 0;
@@ -2384,7 +2405,7 @@ body {
   }
 }
 .cid-rupskIfZ2O {
-  padding-top: 105px;
+  padding-top: 60px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
@@ -2399,7 +2420,7 @@ body {
 .cid-rupqh3B459 {
   background: #ffffff;
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 75px;
 }
 .cid-rupqh3B459 .video-block {
   margin: auto;
@@ -2407,5 +2428,73 @@ body {
 @media (max-width: 768px) {
   .cid-rupqh3B459 .video-block {
     width: 100% !important;
+  }
+}
+.cid-rux5uJ9UJe {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #073b4c;
+}
+@media (max-width: 767px) {
+  .cid-rux5uJ9UJe .content {
+    text-align: center;
+  }
+  .cid-rux5uJ9UJe .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rux5uJ9UJe .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rux5uJ9UJe .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rux5uJ9UJe .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rux5uJ9UJe .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rux5uJ9UJe .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rux5uJ9UJe .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rux5uJ9UJe .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rux5uJ9UJe .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rux5uJ9UJe .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rux5uJ9UJe .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rux5uJ9UJe .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
   }
 }
