--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1907,8 +1907,8 @@ body {
   min-height: 188px;
 }
 .cid-rupK3Fkqfb {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 120px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rupK3Fkqfb .line {
@@ -1927,6 +1927,51 @@ body {
 @media (max-width: 768px) {
   .cid-rupK3Fkqfb .inner-container {
     width: 100% !important;
+  }
+}
+.cid-ruxu3cFvBC {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-ruxu3cFvBC .btn-social {
+  border: none !important;
+}
+.cid-ruxu3cFvBC [class^="socicon-"]:before,
+.cid-ruxu3cFvBC [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-ruxu3cFvBC .btn {
+    font-size: 20px !important;
   }
 }
 .cid-rupiCFDP0B {
