--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1929,6 +1929,51 @@ body {
     width: 100% !important;
   }
 }
+.cid-ruxxfqApyR {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-ruxxfqApyR .btn-social {
+  border: none !important;
+}
+.cid-ruxxfqApyR [class^="socicon-"]:before,
+.cid-ruxxfqApyR [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-ruxxfqApyR .btn {
+    font-size: 20px !important;
+  }
+}
 .cid-rupiCFDP0B {
   padding-top: 60px;
   padding-bottom: 60px;
